Projet GL/test/src/test/deca/context/invalid/increment2/bool-comp-int.deca
// Test bool == int

// Historique : cree le 11/01/2023

{
    int a = 3;

    boolean b = true;

    b = b == a;
}